# LibReadConfig

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  INSTALL.txt  LICENSE  LICENSE.txt  Makefile.am  Makefile.in  NEWS  README.txt  aclocal.m4  config  config.h.in  configure  configure.ac  libreadconfig.c  libtool  lrc.pc.in  makefile  readconfig.c  wscript
doc/: LRC_Doxyfile  Makefile  Makefile.am  Makefile.in  Sample-Makefile  lrc-ascii  lrc-config  lrc-defaults  lrc-defaults.c  lrc-example  lrc-example-hdf  lrc-example.c  lrc-hdf-test.h5  lrc-hdf.c  lrc-read.c  lrc.c  sample-config  sample-makefile  sample-readconfig.c
doc/html/: annotated.html  classes.html  examples.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  group___l_r_c__internals.html  group___l_r_c__parser.html  group___l_r_c__user_a_p_i.html  group___l_r_c__wrappers.html  index.html  libreadconfig_8c-source.html  libreadconfig_8c.html  libreadconfig_8c_source.html  libreadconfig_8h-source.html  libreadconfig_8h.html  libreadconfig_8h_source.html  modules.html  pages.html  sample-config-example.html  sample-makefile-example.html  sample-readconfig-example.html  sample-readconfig_8c-example.html  sample-readconfig_8c-source.html  sample-readconfig_8c.html  sample-readconfig_8c_source.html  struct_l_r_c__config_namespace.html  struct_l_r_c__config_options.html  struct_l_r_c__config_types.html  todo.html
doc/latex/: annotated.tex  doxygen.sty  examples.tex  files.tex  group___l_r_c__internals.tex  group___l_r_c__parser.tex  group___l_r_c__user_a_p_i.tex  group___l_r_c__wrappers.tex  index.tex  libreadconfig_8c.tex  libreadconfig_8h.tex  modules.tex  refman.tex  sample-config-example.tex  sample-makefile-example.tex  sample-readconfig-example.tex  sample-readconfig_8c-example.tex  sample-readconfig_8c.tex  struct_l_r_c__config_namespace.tex  struct_l_r_c__config_options.tex  struct_l_r_c__config_types.tex  todo.tex
src/: CMakeLists.txt  Makefile.am  Makefile.in  config.h.in  libreadconfig.c  libreadconfig.h  libreadconfig_hdf5.h  libreadconfig_internals.h
